crates/java-syntax/tests/snapshots/parser_snapshots__parse_assert_statement.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A {
    void func() {
        assert true: "failed";
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
ASSERT_KW "assert"
WHITESPACE " "
TRUE_LITERAL "true"
COLON ":"
WHITESPACE " "
STRING_LITERAL "\"failed\""
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..67
  CLASS_DECL@0..66
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..66
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      METHOD_DECL@9..64
        WHITESPACE@9..14 "\n    "
        VOID_KW@14..18 "void"
        WHITESPACE@18..19 " "
        IDENTIFIER@19..23 "func"
        FORMAL_PARAMETERS@23..25
          L_PAREN@23..24 "("
          R_PAREN@24..25 ")"
        BLOCK@25..64
          WHITESPACE@25..26 " "
          L_BRACE@26..27 "{"
          ASSERT_STMT@27..58
            WHITESPACE@27..36 "\n        "
            ASSERT_KW@36..42 "assert"
            LITERAL@42..47
              WHITESPACE@42..43 " "
              TRUE_LITERAL@43..47 "true"
            COLON@47..48 ":"
            LITERAL@48..57
              WHITESPACE@48..49 " "
              STRING_LITERAL@49..57 "\"failed\""
            SEMICOLON@57..58 ";"
          WHITESPACE@58..63 "\n    "
          R_BRACE@63..64 "}"
      WHITESPACE@64..65 "\n"
      R_BRACE@65..66 "}"
  WHITESPACE@66..67 "\n"
