crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_constructor.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { A() {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "A"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..18
  CLASS_DECL@0..18
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..18
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      CONSTRUCTOR_DECL@9..16
        WHITESPACE@9..10 " "
        IDENTIFIER@10..11 "A"
        FORMAL_PARAMETERS@11..13
          L_PAREN@11..12 "("
          R_PAREN@12..13 ")"
        BLOCK@13..16
          WHITESPACE@13..14 " "
          L_BRACE@14..15 "{"
          R_BRACE@15..16 "}"
      WHITESPACE@16..17 " "
      R_BRACE@17..18 "}"
