crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_empty_decls.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { ;;;;;; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
SEMICOLON ";"
SEMICOLON ";"
SEMICOLON ";"
SEMICOLON ";"
SEMICOLON ";"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..18
  CLASS_DECL@0..18
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..18
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      EMPTY_DECL@9..11
        WHITESPACE@9..10 " "
        SEMICOLON@10..11 ";"
      EMPTY_DECL@11..12
        SEMICOLON@11..12 ";"
      EMPTY_DECL@12..13
        SEMICOLON@12..13 ";"
      EMPTY_DECL@13..14
        SEMICOLON@13..14 ";"
      EMPTY_DECL@14..15
        SEMICOLON@14..15 ";"
      EMPTY_DECL@15..16
        SEMICOLON@15..16 ";"
      WHITESPACE@16..17 " "
      R_BRACE@17..18 "}"
