crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_instance_initializer.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
StartNode(INSTANCE_INITIALIZER, forward_parent=None)
StartNode(BLOCK, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
<none>
